--- a/index.html
+++ b/index.html
@@ -26,51 +26,41 @@
                     row[row.indexOf(numb)] = turn.piece
                 }
             }
-        } checkBoard(board)
-    return console.log(board)
-    }
-
-    const displayBoard = () => {
-     return console.log(board)
+        } 
+        checkBoard(board)
+        const display = console.log(board)
+    return display
     }
 
     const checkBoard = (board) => {
         const player1Pieces = ['X','X','X'].toString()
         const player2Pieces = ['O', 'O', 'O'].toString()
+        let check = []
         for (i = 0; i < 2; i++ ) {
             if (board[i].toString() == player1Pieces) {
                 return console.log('Player 1 wins')
-                
+                break
             }
-            else if (row[i] == player2Pieces) {
+            else if (board[i].toString() == player2Pieces) {
                 return console.log('Player 2 wins')
             }
-        } let check = []
-        for (i = 0, ii = 0; i < 3; i++ ) {
-            check.push(board[i][ii])
+        }
+        const vertCheck = (column) => {
+            for (i = 0, ii = column; i < 3; i++ ) {
+                check.push(board[i][ii])
                 if (check.toString() == player1Pieces) {
                     return console.log('Player 1 wins')
                 }
                 else if (check.toString() == player2Pieces) {
                     return console.log('Player 2 wins')
                 }
-                else if (i = 3) {
-                    check = []
-                    for (i = 0, ii = 1; i < 3; i++ ) {
-                        check.push(board[i][ii])
-                            if (check.toString() == player1Pieces) {
-                                return console.log('Player 1 wins')
-                            }
-                            else if (check.toString() == player2Pieces) {
-                                return console.log('Player 2 wins')
-                            }
-
-                    }
-                }
-        } 
-        return console.log(check)       
-    }
-return {board, move, displayBoard}
+            }
+        }
+        vertCheck(0)
+        vertCheck(1)
+        vertCheck(2)
+    } 
+return {board, move,}
 }
 
 function player() {
@@ -79,14 +69,9 @@ function player() {
         console.log('Your player name is ' + name)
         return name
     }
-    return {getName}
-}
-
-function gameController() {
-    const player1 = player().getName()
-    const player2 = player().getName()
+    const player1 = getName()
+    const player2 = getName()
     console.log('The match is ' + player1 + ' vs ' + player2)
-    
     const players = [
         {
             name: player1,
@@ -98,22 +83,34 @@ function gameController() {
             piece: 'O',
         }
     ]
-    let activePlayer = players[0];
-
-const switchPlayerTurn = () => {
-  activePlayer = activePlayer === players[0] ? players[1] : players[0];
-};
-const getActivePlayer = () => activePlayer;
-
-return {switchPlayerTurn, getActivePlayer}
+    let activePlayer = players[0]
+    const switchPlayerTurn = () => {
+        activePlayer = activePlayer === players[0] ? players[1] : players[0];
+    }
+    const getActivePlayer = () => activePlayer
+return {switchPlayerTurn, getActivePlayer, players}
 }
 
+function gameController() {
+   const game1 = player() 
+   const board1 = game()
+   let i = 0
+   while (i < 10) {
+   board1.move(game1.getActivePlayer())
+   game1.switchPlayerTurn()
+   i++
+   
+   }
 
-const playerGame1 = gameController()
-const game1 = game()
-game1.move((playerGame1.getActivePlayer()))
-game1.move((playerGame1.getActivePlayer()))
-game1.move((playerGame1.getActivePlayer()))
+   
+
+
+}
+
+gameController()
+
+
+
 
 
 
