--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div class="board"></div>    
+<div class="board">
+    
+</div>  
+<div class="text"></div>  
    
 <script src="script.js"></script>
 </body>
